--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 node_modules/
+
+.DS_store
+/client/build
+/client/.env.local
+/client/.env.test.local
+/client/.env.production.local
+
+npm-debug.log*
